@@ -1,6 +1,6 @@
 #ifndef EDIT_H
 #define EDIT_H
 
-void edit_object (const gchar* name);
+void edit_object (const gchar* name, gint nc);
 
 #endif  /* EDIT_H */
